--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 NEWS for SoftHSM -- History of user visible changes
 
-SoftHSM 2.3.0 - 2017-06-xx
+SoftHSM 2.3.0 - 2017-06-30
 
 * Issue #130: Upgraded to PKCS#11 v2.40.
   * Minor changes to some return values.
@@ -14,6 +14,7 @@ SoftHSM 2.3.0 - 2017-06-xx
   attribute CKA_EXTRACTABLE = false. Whitelist SHA algorithms to allow
   C_DigestKey in this case.
 * Issue #225: Show slot id after initialization.
+* Issue #247: Run AppVeyor (Windows CI) for each PR and merge.
 * Issue #257: Set CKA_DECRYPT/CKA_ENCRYPT flags on key import to true.
   (Patch from Martin Domke)
 * Issue #261: Add support for libeaycompat lib for FIPS on Windows.
@@ -34,6 +35,8 @@ SoftHSM 2.3.0 - 2017-06-xx
 * Issue #309: CKO_CERTIFICATE and CKO_PUBLIC_KEY now defaults to
   CKA_PRIVATE=false.
 * Issue #314: Update README with information about logging.
+* Issue #330: Adjust log levels for failing to enumerate object store.
+  (Patch from Nikos Mavrogiannopoulos)
 
 Bugfixes:
 * Issue #216: Better handling of CRYPTO_set_locking_callback() for OpenSSL.
