--- a/NEWS
+++ b/NEWS
@@ -4,11 +4,14 @@ SoftHSM develop
 
 * Issue #140: Support for CKA_ALLOWED_MECHANISMS.
   (Patch from Brad Hess)
+* Issue #220: Support for CKM_DES3_CMAC and CKM_AES_CMAC.
 * Issue #325: Support for CKM_AES_GCM.
 * Issue #334: Document that initialized tokens will be reassigned to another
   slot (based on the token serial number).
 * Issue #335: Support for CKM_RSA_PKCS_PSS.
   (Patch from Nikos Mavrogiannopoulos)
+* Issue #341: Import AES keys with softhsm2-util.
+  (Patch from Pavel Cherezov)
 
 
 SoftHSM 2.3.0 - 2017-07-03
