--- a/NEWS
+++ b/NEWS
@@ -12,6 +12,7 @@ SoftHSM develop
   (Patch from Nikos Mavrogiannopoulos)
 * Issue #341: Import AES keys with softhsm2-util.
   (Patch from Pavel Cherezov)
+* Issue #348: Document that OSX needs pkg-config to detect cppunit.
 
 Bugfixes:
 * Issue #345: Private objects are presented to security officer in search
