--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,7 @@ SoftHSM develop
 
 * Issue #140: Support for CKA_ALLOWED_MECHANISMS.
   (Patch from Brad Hess)
+* Issue #141: Support CKA_ALWAYS_AUTHENTICATE for private key objects.
 * Issue #220: Support for CKM_DES3_CMAC and CKM_AES_CMAC.
 * Issue #226: Configuration option for Windows build to enable build with
   static CRT (/MT).
