--- a/NEWS
+++ b/NEWS
@@ -18,6 +18,7 @@ SoftHSM develop
 * Issue #348: Document that OSX needs pkg-config to detect cppunit.
 * Issue #349: softhsm2-util will check the configuration and report any
   issues before loading the PKCS#11 library.
+* Issue #351: Upgrade Botan in Jenkins build.
 
 Bugfixes:
 * Issue #345: Private objects are presented to security officer in search
