--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,11 @@
 NEWS for SoftHSM -- History of user visible changes
 
+SoftHSM develop
+
+Bugfixes:
+* Issue #377: Duplicate symbol error with custom p11test.
+
+
 SoftHSM 2.4.0 - 2017-02-27
 
 * Issue #135: Support PKCS#8 for GOST.
